--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Emelle Stottele's Webpage</h1>
 </body>
+Please like my page!
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" 
 src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v11.0" 
