--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
 <body>
     <h1>Emelle Stottele's Webpage</h1>
 </body>
+<b>There is currently nothing on my wepage</b>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VXJCEP9JMB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VXJCEP9JMB');
+</script>
 <p>
-Please like my page!
+Please like this page!
 </p>
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" 
