--- a/index.html
+++ b/index.html
@@ -1,12 +1,54 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta name="description" content="Cacti for Dummies.">
+  <link rel="stylesheet" href="main.css">
+  <title>Cactus</title>
 </head>
 <body>
-    <h1>Emelle Stottele's Webpage</h1>
+  <h1>Cacti for <span style="color:rgb(0, 174, 255)">DU</span><span style="color: rgb(218, 255, 56)">MM</span><span
+      style="color:rgb(3, 250, 114)">IE</span><span style="color:rgb(228, 31, 201)">S!</span> </h1>
+
+
+  <div class="container">
+
+    <div class="nav-wrapper">
+
+      <div class="nav-section">
+
+        <div class="nav-link-wrapper">
+          <a href="index.html">Welcome</a>
+        </div>
+
+        <div class="nav-link-wrapper">
+          <a href="webpage2.html">Why Cacti R Cool</a>
+        </div>
+
+        <div class="nav-link-wrapper">
+          <a href="webpage3.html">How to talk to UR Cactus</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <p>
+    Welcome this webpage which is all abut cacti. This webpage was inspired by my friends Cactus which they have outside their dorm. 
+    </p>
+
+  <img src="images/Cactus3.jpg" alt="cacti" style="width:1300px;height:500px;">
+  <p>
+    <span style="color:rgb(2, 61, 0)">Cool picture right?</span> This picture is a picture of Cacti. Cacti means 2 or more cactus. 
+    Cactus is only 1 cactus. Make sure to note this distinction!!!!
+    CAREFUL!!!! If U mess up u can <span style="color:rgb(228, 31, 201)">DEEPLY</span> offend the Cacti community 
+    </p>
+ <div class="webpage-bottom">
+   <p>Follow the CSCI040 Course Webpage:</p>
+    <a href="https://github.com/mikeizbicki/cmc-csci040">Course Webpage</a>
+    <p>Follow these Webpages:</p>
+    <a href="">XX</a>
+    <a href="">XX</a>
+    <p>Follow Mikes Webpage:</p>
+    <a href="https://izbicki.me/">Mike</a>
+
 </body>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VXJCEP9JMB"></script>
@@ -17,9 +59,6 @@
 
   gtag('config', 'G-VXJCEP9JMB');
 </script>
-<p>
-Please like this page!
-</p>
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" 
 src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v11.0" 
