--- a/webpage2.html
+++ b/webpage2.html
@@ -4,5 +4,5 @@
 <head>
     <meta name="description" content="Why Cacti R Cool">
     <link rel="stylesheet" href="main.css">
-    <title>How to become a rhino?</title>
+    <title>Why Cacto R Cool</title>
 </head>
