--- a/webpage2.html
+++ b/webpage2.html
@@ -6,3 +6,26 @@
     <link rel="stylesheet" href="main.css">
     <title>Why Cacto R Cool</title>
 </head>
+<body>
+    <h1>Why Cacti R <span style="color:red">c</span><span style="color: green">o</span><span
+            style="color:yellow">o</span><span style="color:blue">o</span><span style="color:orange">l</span></h1>
+
+    <div class="container">
+        <div class="nav-wrapper">
+            <div class="nav-section">
+
+                <div class="nav-link-wrapper">
+                    <a href="index.html">home</a>
+                </div>
+
+                <div class="nav-link-wrapper">
+                    <a href="whyaretheycool.html">why are they cool?</a>
+                </div>
+
+                <div class="nav-link-wrapper">
+                    <a href="howtobecomerhino.html">how to become rhino</a>
+                </div>
+
+            </div>
+        </div>
+    </div>
