--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
    <p>Follow the CSCI040 Course Webpage:</p>
     <a href="https://github.com/mikeizbicki/cmc-csci040">Course Webpage</a>
     <p>Follow these Webpages:</p>
-    <a href="">XX</a>
+    <a href="abroegger8.github.io">Alex</a>
     <a href="">XX</a>
     <p>Follow Mikes Webpage:</p>
     <a href="https://izbicki.me/">Mike</a>
