--- a/webpage2.html
+++ b/webpage2.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="description" content="Why Cacti R Cool">
     <link rel="stylesheet" href="main.css">
-    <title>Why Cacto R Cool</title>
+    <title>Why Cacti R Cool</title>
 </head>
 <body>
     <h1>Why Cacti R <span style="color:red">c</span><span style="color: green">o</span><span
@@ -19,11 +19,11 @@
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="whyaretheycool.html">why are they cool?</a>
+                    <a href="whyaretheycool.html">Why Cacti R Cool</a>
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="howtobecomerhino.html">how to become rhino</a>
+                    <a href="howtobecomerhino.html">How to talk to UR Cactus</a>
                 </div>
 
             </div>
