--- a/webpage2.html
+++ b/webpage2.html
@@ -19,11 +19,11 @@
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="whyaretheycool.html">Why Cacti R Cool</a>
+                    <a href="wepage2.html">Why Cacti R Cool</a>
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="howtobecomerhino.html">How to talk to UR Cactus</a>
+                    <a href="webpage3.html">How to talk to UR Cactus</a>
                 </div>
 
             </div>
