--- a/webpage2.html
+++ b/webpage2.html
@@ -29,3 +29,4 @@
             </div>
         </div>
     </div>
+    <img src="images/Cactus2.jpg" alt="cactus" style="width:1424px;height:300px;">
