--- a/webpage3.html
+++ b/webpage3.html
@@ -4,11 +4,11 @@
 <head>
     <meta name="description" content="How to talk to UR Cactus">
     <link rel="stylesheet" href="main.css">
-    <title>Why Cacti R Cool</title>
+    <title>How to talk to UR Cactus</title>
 </head>
 <body>
-    <h1>Why Cacti R <span style="color:red">c</span><span style="color: green">o</span><span
-            style="color:yellow">o</span><span style="color:blue">o</span><span style="color:orange">l</span></h1>
+    <h1> <span style="color:red">how</span><span style="color: green">to</span><span
+            style="color:yellow">talk</span><span style="color:blue">to</span><span style="color:orange">UR</span><span style="color:rgb(0, 225, 255)">Cactus</span></h1>
 
     <div class="container">
         <div class="nav-wrapper">
