--- a/webpage3.html
+++ b/webpage3.html
@@ -29,3 +29,22 @@
             </div>
         </div>
     </div>
+    <div class="nav-wrapper">
+        <div class="nav-section">
+
+            <div class="nav-link-wrapper">
+                <a href="index.html">home</a>
+            </div>
+
+            <div class="nav-link-wrapper">
+                <a href="wepage2.html">Why Cacti R Cool</a>
+            </div>
+
+            <div class="nav-link-wrapper">
+                <a href="webpage3.html">How to talk to UR Cactus</a>
+            </div>
+
+        </div>
+    </div>
+</div>
+<img src="images/Cactus1.jpg" alt="cactus" style="width:1424px;height:300px;">
