--- a/webpage2.html
+++ b/webpage2.html
@@ -15,7 +15,7 @@
             <div class="nav-section">
 
                 <div class="nav-link-wrapper">
-                    <a href="index.html">home</a>
+                    <a href="index.html">Welcome</a>
                 </div>
 
                 <div class="nav-link-wrapper">
