--- a/webpage3.html
+++ b/webpage3.html
@@ -10,41 +10,33 @@
     <h1> <span style="color:red">how</span><span style="color: green">to</span><span
             style="color:yellow">talk</span><span style="color:blue">to</span><span style="color:orange">UR</span><span style="color:rgb(0, 225, 255)">Cactus</span></h1>
 
-    <div class="container">
-        <div class="nav-wrapper">
-            <div class="nav-section">
-
-                <div class="nav-link-wrapper">
-                    <a href="index.html">home</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="wepage2.html">Why Cacti R Cool</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="webpage3.html">How to talk to UR Cactus</a>
-                </div>
-
-            </div>
-        </div>
-    </div>
-    <div class="nav-wrapper">
-        <div class="nav-section">
-
-            <div class="nav-link-wrapper">
-                <a href="index.html">home</a>
-            </div>
-
-            <div class="nav-link-wrapper">
-                <a href="wepage2.html">Why Cacti R Cool</a>
-            </div>
-
-            <div class="nav-link-wrapper">
-                <a href="webpage3.html">How to talk to UR Cactus</a>
-            </div>
-
-        </div>
-    </div>
-</div>
+    
 <img src="images/Cactus1.jpg" alt="cactus" style="width:1424px;height:300px;">
+<div class="webpage-bottom">
+    <p>Follow the CSCI040 Course Webpage:</p>
+     <a href="https://github.com/mikeizbicki/cmc-csci040">Course Webpage</a>
+     <p>Follow these Webpages:</p>
+     <a href="abroegger8.github.io">Alex</a>
+     <a href="">XX</a>
+     <p>Follow Mikes Webpage:</p>
+     <a href="https://izbicki.me/">Mike</a>
+ 
+ </body>
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+ <script async src="https://www.googletagmanager.com/gtag/js?id=G-VXJCEP9JMB"></script>
+ <script>
+   window.dataLayer = window.dataLayer || [];
+   function gtag(){dataLayer.push(arguments);}
+   gtag('js', new Date());
+ 
+   gtag('config', 'G-VXJCEP9JMB');
+ </script>
+ <div id="fb-root"></div>
+ <script async defer crossorigin="anonymous" 
+ src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v11.0" 
+ nonce="BnCz8MY5"></script>
+ <div class="fb-like" data-href="https://emellestottele.github.io/" data-width="" data-layout="button_count" data-action="like" data-size="large" data-share="true"></div>
+ <p>
+ <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a> <br /> <tt> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</tt></a>.
+ </p>
+ </html>
