--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
   </div>
   <p>
-    Welcome this webpage which is all abut cacti. This webpage was inspired by my friends Cactus which they have outside their dorm. 
+    Welcome this webpage abut cacti. This webpage was inspired by my friends Cactus which they have outside their dorm. 
     </p>
 
   <img src="images/Cactus3.jpg" alt="cacti" style="width:1300px;height:500px;">
@@ -40,6 +40,22 @@
     Cactus is only 1 cactus. Make sure to note this distinction!!!!
     CAREFUL!!!! If U mess up u can <span style="color:rgb(228, 31, 201)">DEEPLY</span> offend the Cacti community 
     </p>
+  <div>
+    <ul>
+      <p>
+        <span style="color:darkred"> Why I made a webpage about cacti</span>
+      </p>
+      <li>
+        My friends have a cactus plant outside their dorm <b><span style="color:red"> :0 </span></b>
+      </li>
+      <li>
+        I had no other ideas <b><span style="color:red"> :P </span></b>
+      </li>
+      <li>
+        I dont have a third reason <b><span style="color:blue"> :D </span></b>
+      </li>
+    </ul>
+  </div>
  <div class="webpage-bottom">
    <p>Follow the CSCI040 Course Webpage:</p>
     <a href="https://github.com/mikeizbicki/cmc-csci040">Course Webpage</a>
