--- a/webpage2.html
+++ b/webpage2.html
@@ -29,6 +29,22 @@
             </div>
         </div>
     </div>
+    <div>
+     <ul>
+            <p>
+              <span style="color:darkred"> They are cool because:</span>
+            </p>
+            <li>
+             <b>They are <span style="color:rgb(0, 255, 13)"> Green </span></b>
+            </li>
+            <li>
+              They have thorns <b><span style="color:red"> !!!!! </span></b>
+            </li>
+            <li>
+              THey live in the <b><span style="color:rgb(230, 165, 27)"> desert </span></b>
+            </li>
+          </ul>
+    </div>
     <img src="images/Cactus2.jpg" alt="cactus" style="width:750px;height:700px;">
     <div class="webpage-bottom">
         <p>Follow the CSCI040 Course Webpage:</p>
