--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         </div>
 
         <div class="nav-link-wrapper">
-          <a href="webpage2.html">Why Cacti R Cool</a>
+          <a href="webpage2.html">Why Cacti are cool</a>
         </div>
 
         <div class="nav-link-wrapper">
-          <a href="webpage3.html">How to talk to UR Cactus</a>
+          <a href="webpage3.html">How to take care of your to Cactus</a>
         </div>
       </div>
     </div>
@@ -36,9 +36,8 @@
 
   <img src="images/Cactus3.jpg" alt="cacti" style="width:1300px;height:500px;">
   <p>
-    <span style="color:rgb(2, 61, 0)">Cool picture right?</span> This picture is a picture of Cacti. Cacti means 2 or more cactus. 
-    Cactus is only 1 cactus. Make sure to note this distinction!!!!
-    CAREFUL!!!! If U mess up u can <span style="color:rgb(228, 31, 201)">DEEPLY</span> offend the Cacti community 
+    <span style="color:rgb(2, 61, 0)">This is a picutre of Cacti</span> Cactus refers to 1 cactus. Cacti refers to 2 or more cacti. 
+    <span style="color:rgb(228, 31, 201)"> This is a very important distinction</span>  
     </p>
   <div>
     <ul>
@@ -49,7 +48,7 @@
         My friends have a cactus plant outside their dorm <b><span style="color:red"> :0 </span></b>
       </li>
       <li>
-        I had no other ideas <b><span style="color:red"> :P </span></b>
+        I had no other ideas <b><span style="color:rgb(21, 255, 0)"> :P </span></b>
       </li>
       <li>
         I dont have a third reason <b><span style="color:blue"> :D </span></b>
