--- a/webpage2.html
+++ b/webpage2.html
@@ -7,8 +7,7 @@
     <title>Why Cacti R Cool</title>
 </head>
 <body>
-    <h1>Why Cacti R <span style="color:red">c</span><span style="color: green">o</span><span
-            style="color:yellow">o</span><span style="color:blue">o</span><span style="color:orange">l</span></h1>
+    <h1><span style="color:red">Why Cacti are cool</span></h1>
 
     <div class="container">
         <div class="nav-wrapper">
@@ -19,11 +18,11 @@
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="wepage2.html">Why Cacti R Cool</a>
+                    <a href="wepage2.html">Why Cacti are cool</a>
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="webpage3.html">How to talk to UR Cactus</a>
+                    <a href="webpage3.html">How to take care of your Cactus</a>
                 </div>
 
             </div>
