--- a/webpage2.html
+++ b/webpage2.html
@@ -44,7 +44,7 @@
             </li>
           </ul>
     </div>
-    <img src="images/Cactus2.jpg" alt="cactus" style="width:750px;height:700px;">
+    <img src="Images/Cactus2.jpg" alt="cactus" style="width:750px;height:700px;">
     <div class="webpage-bottom">
         <p>Follow the CSCI040 Course Webpage:</p>
          <a href="https://github.com/mikeizbicki/cmc-csci040">Course Webpage</a>
