--- a/webpage3.html
+++ b/webpage3.html
@@ -43,7 +43,7 @@
                        </li>
                      </ul>
                </div>
-<img src="images/Cactus1.jpg" alt="cactus" style="width:900px;height:300px;">
+<img src="Images/Cactus1.jpg" alt="cactus" style="width:900px;height:300px;">
 <div class="webpage-bottom">
     <p>Follow the CSCI040 Course Webpage:</p>
      <a href="https://github.com/mikeizbicki/cmc-csci040">Course Webpage</a>
