--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <title>Cactus</title>
 </head>
 <body>
-  <h1>Cacti for <span style="color:rgb(0, 174, 255)">DU</span><span style="color: rgb(218, 255, 56)">MM</span><span
-      style="color:rgb(3, 250, 114)">IE</span><span style="color:rgb(228, 31, 201)">S!</span> </h1>
+  <h1><span style="color:rgb(255, 255, 255)">Cacti For Dummies</span> </h1>
 
 
   <div class="container">
@@ -21,7 +20,7 @@
         </div>
 
         <div class="nav-link-wrapper">
-          <a href="webpage2.html">Why Cacti are cool</a>
+          <a href="webpage2.html">Cacti fun facts</a>
         </div>
 
         <div class="nav-link-wrapper">
@@ -31,10 +30,11 @@
     </div>
   </div>
   <p>
-    Welcome this webpage abut cacti. This webpage was inspired by my friends Cactus which they have outside their dorm. 
+    Welcome this webpage abut cacti. 
     </p>
 
   <img src="Images/Cactus3.jpg" alt="cacti" style="width:1300px;height:500px;">
+  <p>Medium: Photography Description: Many cati </p>
   <p>
     <span style="color:rgb(2, 61, 0)">This is a picutre of Cacti</span> Cactus refers to 1 cactus. Cacti refers to 2 or more cacti. 
     <span style="color:rgb(228, 31, 201)"> This is a very important distinction</span>  
