--- a/webpage2.html
+++ b/webpage2.html
@@ -7,7 +7,7 @@
     <title>Why Cacti R Cool</title>
 </head>
 <body>
-    <h1><span style="color:red">Why Cacti are cool</span></h1>
+    <h1><span style="color:white">Why Cacti are cool</span></h1>
 
     <div class="container">
         <div class="nav-wrapper">
@@ -18,7 +18,7 @@
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="wepage2.html">Why Cacti are cool</a>
+                    <a href="webpage2.html">Cacti fun facts</a>
                 </div>
 
                 <div class="nav-link-wrapper">
@@ -45,6 +45,7 @@
           </ul>
     </div>
     <img src="Images/Cactus2.jpg" alt="cactus" style="width:750px;height:700px;">
+<p>Medium: Photography Description: Man hugging catus </p>
     <div class="webpage-bottom">
         <p>Follow the CSCI040 Course Webpage:</p>
          <a href="https://github.com/mikeizbicki/cmc-csci040">Course Webpage</a>
