--- a/webpage3.html
+++ b/webpage3.html
@@ -7,7 +7,7 @@
     <title>How to talk to UR Cactus</title>
 </head>
 <body>
-    <h1> <span style="color:red">how to take care of your Cactus</span></h1>
+    <h1> <span style="color:white">how to take care of your Cactus</span></h1>
          <div class="container">
                 <div class="nav-wrapper">
                     <div class="nav-section">
@@ -17,7 +17,7 @@
                         </div>
         
                         <div class="nav-link-wrapper">
-                            <a href="wepage2.html">Why Cacti are cool</a>
+                            <a href="webpage2.html">Cacti fun facts</a>
                         </div>
         
                         <div class="nav-link-wrapper">
@@ -44,6 +44,7 @@
                      </ul>
                </div>
 <img src="Images/Cactus1.jpg" alt="cactus" style="width:900px;height:300px;">
+<p>Medium: Photography Description: Many anitmated cacti smiling </p>
 <div class="webpage-bottom">
     <p>Follow the CSCI040 Course Webpage:</p>
      <a href="https://github.com/mikeizbicki/cmc-csci040">Course Webpage</a>
