--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </p>
 
   <img src="Images/Cactus3.jpg" alt="cacti" style="width:1300px;height:500px;">
-  <p>Medium: Photography Description: Many cati </p>
+  <p><b><span style="color:rgb(255, 255, 255)"> Medium: Photography Description: Many cacti</span></b></p>
   <p>
     <span style="color:rgb(2, 61, 0)">This is a picutre of Cacti</span> Cactus refers to 1 cactus. Cacti refers to 2 or more cacti. 
     <span style="color:rgb(228, 31, 201)"> This is a very important distinction</span>  
