--- a/webpage2.html
+++ b/webpage2.html
@@ -31,21 +31,21 @@
     <div>
      <ul>
             <p>
-              <span style="color:darkred"> They are cool because:</span>
+              <span style="color:dark green"> Fun facts:</span>
             </p>
             <li>
-             <b>They are <span style="color:rgb(0, 255, 13)"> Green </span></b>
+             <b><span style="color:rgb(255, 255, 255)"> Cacti stomata only open at night </span></b>
             </li>
             <li>
-              They have thorns <b><span style="color:red"> !!!!! </span></b>
+              <b><span style="color:rgb(255, 255, 255)"> Cacti have spines instead of leaves </span></b>
             </li>
             <li>
-              THey live in the <b><span style="color:rgb(230, 165, 27)"> desert </span></b>
+              <b><span style="color:rgb(255, 255, 255)"> Cacti can store an unbelieveable amount of water in a short time</span></b>
             </li>
           </ul>
     </div>
     <img src="Images/Cactus2.jpg" alt="cactus" style="width:750px;height:700px;">
-<p>Medium: Photography Description: Man hugging catus </p>
+    <p><b><span style="color:rgb(255, 255, 255)"> Medium: Photography Description: Man hugging cactus  </span></b></p>
     <div class="webpage-bottom">
         <p>Follow the CSCI040 Course Webpage:</p>
          <a href="https://github.com/mikeizbicki/cmc-csci040">Course Webpage</a>
