--- a/webpage3.html
+++ b/webpage3.html
@@ -30,21 +30,21 @@
             <div>
                 <ul>
                        <p>
-                         <span style="color:darkred"> To take care of them:</span>
+                         <span style="color:rgb(0, 0, 0)"> To take care of them:</span>
                        </p>
                        <li>
-                        <b><span style="color:rgb(0, 255, 13)"> Water them daily </span></b>
+                        <b><span style="color:rgb(255, 255, 255)"> Water them daily </span></b>
                        </li>
                        <li>
-                         <b><span style="color:red"> Keep them in the Sunlight </span></b>
+                         <b><span style="color:rgb(255, 255, 255)"> Keep them in the Sunlight </span></b>
                        </li>
                        <li>
-                         <b><span style="color:rgb(230, 165, 27)"> Be nice to them</span></b>
+                         <b><span style="color:rgb(255, 255, 255)"> Be nice to them</span></b>
                        </li>
                      </ul>
                </div>
 <img src="Images/Cactus1.jpg" alt="cactus" style="width:900px;height:300px;">
-<p>Medium: Photography Description: Many anitmated cacti smiling </p>
+<p><b><span style="color:rgb(255, 255, 255)"> Medium: Photography Description: Many anitmated cacti smiling  </span></b></p>
 <div class="webpage-bottom">
     <p>Follow the CSCI040 Course Webpage:</p>
      <a href="https://github.com/mikeizbicki/cmc-csci040">Course Webpage</a>
