--- a/index.html
+++ b/index.html
@@ -30,8 +30,29 @@
     </div>
   </div>
   <p>
-    Welcome this webpage abut cacti. 
+    Welcome this webpage abut cacti. Below is a table with information about 3 cacti:
     </p>
+    <table id="Type of Cactus">
+      <tr>
+        <th><b>Type of Cactus</b></th>
+        <th>Arrojadoa</th>
+        <th>Austrocactus</th>
+        <th>Blossfeldia</th>
+      </tr>
+      <tr>
+        <th><b>Location</b></th>
+        <th>Brazil</th>
+        <th>Chile</th>
+        <th>Bolivia</th>
+      </tr>
+      <tr>
+        <th><b>Height (ft)</b></th>
+        <th>6.5</th>
+        <th>2.6</th>
+        <th>1.2</th>
+      </tr>
+    </table>
+  
 
   <img src="Images/Cactus3.jpg" alt="cacti" style="width:650px;height:250px;">
   <p><b><span style="color:rgb(255, 255, 255)"> Medium: Photography Description: Many cacti</span></b></p>
