--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
         <span style="color:darkred"> Why I made a webpage about cacti</span>
       </p>
       <li>
-        My friends have a cactus plant outside their dorm <b><span style="color:red"> :0 </span></b>
+        My friends have a cactus plant outside their dorm 
       </li>
       <li>
-        I had no other ideas <b><span style="color:rgb(21, 255, 0)"> :P </span></b>
+        I had no other ideas 
       </li>
       <li>
-        I dont have a third reason <b><span style="color:blue"> :D </span></b>
+        I dont have a third reason 
       </li>
     </ul>
   </div>
@@ -80,7 +80,7 @@
    <p>Follow the CSCI040 Course Webpage:</p>
     <a href="https://github.com/mikeizbicki/cmc-csci040">Course Webpage</a>
     <p>Follow these Webpages:</p>
-    <a href="abroegger8.github.io">Alex</a>
+    <a href="https://abroegger8.github.io/">Alex</a>
     <a href="">XX</a>
     <p>Follow Mikes Webpage:</p>
     <a href="https://izbicki.me/">Mike</a>
