--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="description" content="Cacti for Dummies.">
   <link rel="stylesheet" href="main.css">
-  <title>Cactus</title>
+  <title>Welcome</title>
 </head>
 <body>
   <h1><span style="color:rgb(255, 255, 255)">Cacti For Dummies</span> </h1>
