--- a/webpage2.html
+++ b/webpage2.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <meta name="description" content="Why Cacti R Cool">
+    <meta name="description" content="Cacti fun facts">
     <link rel="stylesheet" href="main.css">
-    <title>Why Cacti R Cool</title>
+    <title>Cacti fun facts</title>
 </head>
 <body>
     <h1><span style="color:white">Why Cacti are cool</span></h1>
