--- a/webpage3.html
+++ b/webpage3.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <meta name="description" content="How to talk to UR Cactus">
+    <meta name="description" content="How to take care of your Cactus">
     <link rel="stylesheet" href="main.css">
-    <title>How to talk to UR Cactus</title>
+    <title>How to take care of your Cactus</title>
 </head>
 <body>
     <h1> <span style="color:white">how to take care of your Cactus</span></h1>
