--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
   <p><b><span style="color:rgb(255, 255, 255)"> Medium: Photography Description: Many cacti</span></b></p>
   <p>
     <span style="color:rgb(2, 61, 0)">This is a picutre of Cacti</span> Cactus refers to 1 cactus. Cacti refers to 2 or more cacti. 
-    <span style="color:rgb(228, 31, 201)"> This is a very important distinction</span>  
+    <span style="color:rgb(255, 0, 0)"> This is a very important distinction</span>  
     </p>
   <div>
     <ul>
       <p>
-        <span style="color:darkred"> Why I made a webpage about cacti</span>
+        <span style="color:darkolivegreen"> Why I made a webpage about cacti:</span>
       </p>
       <li>
         My friends have a cactus plant outside their dorm 
