--- a/webpage2.html
+++ b/webpage2.html
@@ -51,7 +51,7 @@
          <a href="https://github.com/mikeizbicki/cmc-csci040">Course Webpage</a>
          <p>Follow these Webpages:</p>
          <a href="abroegger8.github.io">Alex</a>
-         <a href="">XX</a>
+         <a href="https://herbertlohmus.github.io/index.html">Herbert</a>
          <p>Follow Mikes Webpage:</p>
          <a href="https://izbicki.me/">Mike</a>
      
